Resolve about me section spacing

--- a/src/styles/AboutStyles.css
+++ b/src/styles/AboutStyles.css
@@ -1,7 +1,7 @@
 .about-section {
   display: flex;
   flex-direction: row;
-  margin: 0% 15% 15% 15%;
+  margin: 0% 30% 15% 30%;
   padding-bottom: 5%;
   border-bottom: 1px solid #333333;
 }
